# RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
data/: processed_texts.json
data/vector_db/: index.pkl
output/: batch_input.jsonl  batch_output.jsonl
src/: agent.py  preprocess_pdf.py  retriever.py
