[project]
name = "agent-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Kyuhee Lim",email = "kyuheelim209@gmail.com"}
]

requires-python = ">=3.12,<4.0"
dependencies = [
    "datasets (>=3.3.2,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openai (>=1.63.2,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "pymupdf (>=1.25.3,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"